# lame-hardware

./: CMakeLists.txt  CMakePresets.json  README.md
device/: CMakeLists.txt
device/src/: Led.c
device/tests/: CMakeLists.txt  LedTest.cpp
drivers/: CMakeLists.txt
drivers-mocks/: CMakeLists.txt
drivers-mocks/include/lame/: PinMock.hpp
drivers-mocks/src/: PinMock.cpp
drivers-mocks/tests/: CMakeLists.txt  PinMockTest.cpp  driversMocksTests.cpp
drivers/include/lame/: Pin.h
include/lame/device/: Led.h
src/device/: Led.c
tests/: CMakeLists.txt  LedTest.cpp
